// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NationalityOptionsGrid component should correctly render the grid when nationalities filter applied 1`] = `
<NationalityOptionsGrid>
  <div
    className="px-6 max-w-md m-auto"
  >
    <div
      className="h-20 my-6 text-center"
      data-testid="options-grid-message"
    >
      Filter your users by nationalies.
    </div>
    <div
      className="grid grid-cols-2 justify-between items-center m-auto col-gap-4 row-gap-12"
      style={
        Object {
          "justifyItems": "center",
        }
      }
    >
      <Component
        isSelected={true}
        key="CH"
        nationality="CH"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={true}
        key="ES"
        nationality="ES"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={true}
        key="BR"
        nationality="BR"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={true}
        key="FR"
        nationality="FR"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
    </div>
  </div>
</NationalityOptionsGrid>
`;

exports[`NationalityOptionsGrid component should correctly render the grid when no nationalities filter applied 1`] = `
<NationalityOptionsGrid>
  <div
    className="px-6 max-w-md m-auto"
  >
    <div
      className="h-20 my-6 text-center"
      data-testid="options-grid-message"
    >
      Filter your users by nationalies.
      <div
        className="text-sm"
      >
        If no nationalities are selected no filter will be applied
      </div>
    </div>
    <div
      className="grid grid-cols-2 justify-between items-center m-auto col-gap-4 row-gap-12"
      style={
        Object {
          "justifyItems": "center",
        }
      }
    >
      <Component
        isSelected={false}
        key="CH"
        nationality="CH"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={false}
        key="ES"
        nationality="ES"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={false}
        key="BR"
        nationality="BR"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
      <Component
        isSelected={false}
        key="FR"
        nationality="FR"
      >
        <div
          data-testid="nationality-option-card"
        />
      </Component>
    </div>
  </div>
</NationalityOptionsGrid>
`;
